--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "i18next": "^23.10.1",
+    "i18next-http-backend": "^2.5.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.9.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
+    "react-scroll-trigger": "^0.6.14",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
